# jocus

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
jocus/: __main__.py  game.py  game2.py  state.py  voice.py
strip/: __main__.py
